--- a/FoodCollector/Base.lproj/Main.storyboard
+++ b/FoodCollector/Base.lproj/Main.storyboard
@@ -1060,19 +1060,32 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" restorationIdentifier="publicationEditorTVCell" selectionStyle="default" indentationWidth="10" reuseIdentifier="publicationEditorTVCell" textLabel="f82-Un-8mO" style="IBUITableViewCellStyleDefault" id="Ewy-4Y-mzw">
+                            <tableViewCell contentMode="scaleToFill" restorationIdentifier="publicationEditorTVCell" selectionStyle="default" indentationWidth="10" reuseIdentifier="publicationEditorTVCell" id="Ewy-4Y-mzw" customClass="FCPublicationEditorTVCell" customModule="FoodCollector" customModuleProvider="target">
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Ewy-4Y-mzw" id="RyL-mx-sYp">
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="f82-Un-8mO">
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DSJ-1h-weA">
+                                            <rect key="frame" x="8" y="4" width="584" height="35"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="35" id="XL9-hm-aZU"/>
+                                                <constraint firstAttribute="width" constant="584" id="nZe-Xt-iGA"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" name="ArialHebrew" family="Arial Hebrew" pointSize="17"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstItem="DSJ-1h-weA" firstAttribute="trailing" secondItem="RyL-mx-sYp" secondAttribute="trailingMargin" id="QEH-50-hYL"/>
+                                        <constraint firstItem="DSJ-1h-weA" firstAttribute="leading" secondItem="RyL-mx-sYp" secondAttribute="leadingMargin" id="ggp-f2-cVl"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="DSJ-1h-weA" secondAttribute="bottom" constant="-4" id="hTv-uv-Baw"/>
+                                        <constraint firstItem="DSJ-1h-weA" firstAttribute="top" secondItem="RyL-mx-sYp" secondAttribute="topMargin" constant="-4" id="w7v-IX-jd5"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="titleLabel" destination="DSJ-1h-weA" id="AiW-Gf-GxJ"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -1090,7 +1103,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SXF-oP-PNW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2905" y="1024"/>
+            <point key="canvasLocation" x="2802" y="1024"/>
         </scene>
         <!--Image-->
         <scene sceneID="K1Q-5c-8XF">
@@ -1359,6 +1372,6 @@
         <image name="bell-26.png" width="26" height="26"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="zRq-Fh-spd"/>
+        <segue reference="7Uz-wH-dgX"/>
     </inferredMetricsTieBreakers>
 </document>
