--- a/FoodCollector/Base.lproj/Main.storyboard
+++ b/FoodCollector/Base.lproj/Main.storyboard
@@ -1176,14 +1176,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Gzb-Rh-v0y">
-                                <rect key="frame" x="0.0" y="101" width="600" height="162"/>
+                                <rect key="frame" x="0.0" y="68" width="600" height="162"/>
                                 <connections>
                                     <outlet property="dataSource" destination="19G-X7-6HX" id="myC-LK-hCc"/>
                                     <outlet property="delegate" destination="19G-X7-6HX" id="Rqm-J1-q80"/>
                                 </connections>
                             </pickerView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u4c-Or-ldA">
-                                <rect key="frame" x="270" y="316" width="61" height="30"/>
+                                <rect key="frame" x="270" y="343" width="61" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="61" id="RV4-nR-zDb"/>
                                 </constraints>
@@ -1191,27 +1191,39 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="Pa4-Qn-N74" kind="unwind" unwindAction="unwindFromTypeOfCollectionEditorVC:" id="59i-q3-K1q"/>
+                                    <action selector="saveButtonAction:" destination="19G-X7-6HX" eventType="touchUpInside" id="M5A-ui-5qC"/>
                                 </connections>
                             </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="הכנס מספר טלפון" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="TIx-uY-As2">
+                                <rect key="frame" x="195" y="214" width="210" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="210" id="kUN-EV-H9h"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="phonePad" enablesReturnKeyAutomatically="YES"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="Gzb-Rh-v0y" firstAttribute="top" secondItem="mes-xv-35f" secondAttribute="bottom" constant="37" id="02b-5I-o4p"/>
-                            <constraint firstItem="u4c-Or-ldA" firstAttribute="top" secondItem="Gzb-Rh-v0y" secondAttribute="bottom" constant="53" id="4xt-da-yOD"/>
+                            <constraint firstItem="Gzb-Rh-v0y" firstAttribute="top" secondItem="mes-xv-35f" secondAttribute="bottom" constant="4" id="02b-5I-o4p"/>
+                            <constraint firstItem="TIx-uY-As2" firstAttribute="top" secondItem="Gzb-Rh-v0y" secondAttribute="bottom" constant="-16" id="2F0-gJ-Y2m"/>
+                            <constraint firstItem="u4c-Or-ldA" firstAttribute="top" secondItem="Gzb-Rh-v0y" secondAttribute="bottom" constant="113" id="4xt-da-yOD"/>
                             <constraint firstAttribute="centerX" secondItem="u4c-Or-ldA" secondAttribute="centerX" id="HF7-No-WJe"/>
                             <constraint firstItem="Gzb-Rh-v0y" firstAttribute="leading" secondItem="wps-jj-r7A" secondAttribute="leading" id="RJJ-xX-UBr"/>
                             <constraint firstAttribute="centerX" secondItem="Gzb-Rh-v0y" secondAttribute="centerX" id="T0o-TO-CkD"/>
+                            <constraint firstAttribute="centerX" secondItem="TIx-uY-As2" secondAttribute="centerX" id="yi1-At-vas"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="collectionTypePicker" destination="Gzb-Rh-v0y" id="pEs-lc-FGB"/>
+                        <outlet property="textField" destination="TIx-uY-As2" id="XfD-5t-LJV"/>
+                        <segue destination="Pa4-Qn-N74" kind="unwind" identifier="unwindFromTypeOfCollectionEditorVC" unwindAction="unwindFromTypeOfCollectionEditorVC:" id="X9y-fz-6yK"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VNj-mh-Oo8" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="Pa4-Qn-N74" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="3156" y="1878"/>
+            <point key="canvasLocation" x="3120" y="1878"/>
         </scene>
         <!--Date Picker-->
         <scene sceneID="mRh-D8-t31">
@@ -1226,7 +1238,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="MA1-GG-3fS">
-                                <rect key="frame" x="0.0" y="103" width="600" height="162"/>
+                                <rect key="frame" x="0.0" y="79" width="600" height="162"/>
                                 <date key="date" timeIntervalSinceReferenceDate="440793059.67927003">
                                     <!--2014-12-20 18:30:59 +0000-->
                                 </date>
@@ -1246,10 +1258,10 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="MA1-GG-3fS" firstAttribute="top" secondItem="ikl-kc-t5e" secondAttribute="bottom" constant="39" id="3cI-Y8-ftx"/>
+                            <constraint firstItem="MA1-GG-3fS" firstAttribute="top" secondItem="ikl-kc-t5e" secondAttribute="bottom" constant="15" id="3cI-Y8-ftx"/>
                             <constraint firstItem="MA1-GG-3fS" firstAttribute="leading" secondItem="Jbm-Wd-MwB" secondAttribute="leading" id="Bbf-xl-I5c"/>
                             <constraint firstAttribute="centerX" secondItem="7lC-CS-FO7" secondAttribute="centerX" id="EkS-KZ-eZG"/>
-                            <constraint firstItem="7lC-CS-FO7" firstAttribute="top" secondItem="MA1-GG-3fS" secondAttribute="bottom" constant="51" id="LQu-Tb-xgr"/>
+                            <constraint firstItem="7lC-CS-FO7" firstAttribute="top" secondItem="MA1-GG-3fS" secondAttribute="bottom" constant="75" id="LQu-Tb-xgr"/>
                             <constraint firstAttribute="centerX" secondItem="MA1-GG-3fS" secondAttribute="centerX" id="kBf-Wa-6dw"/>
                         </constraints>
                     </view>
@@ -1260,7 +1272,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gES-f9-Ayx" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="kis-C0-kx7" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="2444" y="1878"/>
+            <point key="canvasLocation" x="2331" y="1878"/>
         </scene>
         <!--Adress Selector-->
         <scene sceneID="x9I-Df-6XD">
@@ -1357,17 +1369,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WXd-d6-bYT">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="right" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="WXd-d6-bYT">
                                 <rect key="frame" x="16" y="128" width="568" height="30"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <fontDescription key="fontDescription" name="ArialHebrew" family="Arial Hebrew" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES"/>
                             </textField>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AwG-v1-fGh">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" textAlignment="right" translatesAutoresizingMaskIntoConstraints="NO" id="AwG-v1-fGh">
                                 <rect key="frame" x="16" y="103" width="568" height="72"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                <fontDescription key="fontDescription" name="ArialHebrew" family="Arial Hebrew" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences" enablesReturnKeyAutomatically="YES"/>
                             </textView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hlY-bO-6XQ">
                                 <rect key="frame" x="270" y="231" width="61" height="30"/>
@@ -1396,8 +1407,8 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="pubSubTitleText" destination="AwG-v1-fGh" id="HNS-Ng-gDr"/>
-                        <outlet property="pubTitleText" destination="WXd-d6-bYT" id="T1h-Kv-gbJ"/>
+                        <outlet property="textField" destination="WXd-d6-bYT" id="XOW-oc-mSd"/>
+                        <outlet property="textView" destination="AwG-v1-fGh" id="87w-Og-Sw0"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XcG-CF-ncX" userLabel="First Responder" sceneMemberID="firstResponder"/>
